# scontrino-webapp

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  api.py  database.py  pyproject.toml  receipt_auditor.py  requirements.txt
backend/backup/: backup.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  theme.tsx  types.ts
frontend/src/components/: Inbox.tsx  Ledger.tsx  Upload.tsx
